--- a/src/app/Features/dashboard/dashboard.html
+++ b/src/app/Features/dashboard/dashboard.html
@@ -4,20 +4,21 @@
     <div class="row g-4">
 
       <!-- Analysis -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
-             [routerLink]="['/admin/Analysis']"
-             style="cursor: pointer;">
-          <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Analysis">
-          <div class="card-body text-center">
-            <h5 class="card-title">Analysis</h5>
-          </div>
-        </div>
-      </div>
+     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+  <div class="card h-100 card-pop"
+       [routerLink]="['/admin/Analysis']"
+       style="cursor: pointer;">
+    <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Analysis">
+    <div class="card-body text-center">
+      <h5 class="card-title">Analysis</h5>
+    </div>
+  </div>
+</div>
+
 
       <!-- Business -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/Business']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/Businessdept.jpg" alt="Business">
@@ -29,7 +30,7 @@
 
       <!-- Funds -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/Funds']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/Funds.jpg" alt="Funds">
@@ -41,7 +42,7 @@
 
       <!-- Supply Chain -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/SupplyChain']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Supply Chain">
@@ -53,7 +54,7 @@
 
       <!-- Project -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/Project']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Project">
@@ -65,7 +66,7 @@
 
       <!-- Risk -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/Risk']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Risk">
@@ -77,7 +78,7 @@
 
       <!-- Human Resources -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/HR']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="Human Resources">
@@ -89,7 +90,7 @@
 
       <!-- Human Resources Management -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/HRManagement']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/AnalysisDepartment.jpg" alt="HR Management">
@@ -101,7 +102,7 @@
 
       <!-- Logistics -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-        <div class="card h-100"
+        <div class="card h-100 card-pop"
              [routerLink]="['/admin/Logistics']"
              style="cursor: pointer;">
           <img class="card-img-top" src="/assets/Images/logistics.jpg" alt="Logistics">
